test/conformance/chainsaw/verify-images/clusterpolicy/standard/imageExtractors-complex-keyless/crd-ready.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: tasks.tekton.dev
